syntax = "proto3";
option java_package = "Grpc";

message ProjectCreateRequest{
  string request = 1;
}

message ProjectCreateResponse{
  string response = 1;
  int32 status = 2;
}

service ProjectService{
  rpc createProject(ProjectCreateRequest) returns(ProjectCreateResponse);
}